--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/383a3bf828.js" crossorigin="anonymous"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-   <script src="static/iziToast/dist/js/iziToast.min.js"></script>
-   <link rel="stylesheet" href="static/iziToast/dist/css/iziToast.min.css">
+   <script src="/static/iziToast/dist/js/iziToast.min.js"></script>
+   <link rel="stylesheet" href="/static/iziToast/dist/css/iziToast.min.css">
 
-  <script src="static/js/base.js?r={{r}}"></script>
+  <script src="/static/js/base.js?r={{r}}"></script>
 
 	{% block head%} {% endblock%}
   </head>
