--- a/static/css/index.css
+++ b/static/css/index.css
@@ -59,8 +59,11 @@ body {
 	position: absolute;
 	right: 5%;
 	cursor: pointer;
+	transition: 0.3s;
 }
-
+#pfp:hover {
+	opacity:0.8;
+}
 
 
 .search-bar{
@@ -275,6 +278,78 @@ body {
 }
 
 
+#search-res {
+    width: 100vw;
+    height: 77vh;
+    position: absolute;
+    top: 238px;
+    bottom: 27px;
+    display:grid;
+    padding-left: 30px;
+    padding-right: 30px;
+    grid-template-columns: auto auto auto auto;
+    justify-content: center;
+    /* gap: 20px; */
+
+
+}
+#search-res > *:not(:last-child) {
+    display: block;
+    margin-right: 100px; 
+} 
+/* #search-res > * {
+	margin-left: 20px;
+}
+#search-res > *:first-child {
+	margin-left: 0;
+} */
+
+.item-listing {
+	width: fit-content;
+	height:fit-content;
+	max-width: 250px;
+	min-width: 229px;
+	max-height: 300px;
+	background-color:white;
+	padding: 13px;
+	box-shadow: 0px 0px 15px -1px rgba(0,0,0,0.09);
+	-webkit-box-shadow: 0px 0px 15px -1px rgba(0,0,0,0.09);
+	-moz-box-shadow: 0px 0px 15px -1px rgba(0,0,0,0.09);
+	border-radius: 10%;
+	overflow: clip;
+	cursor: pointer;
+}
+.item-listing img {
+	height: 176px;
+	border-radius: 20px;
+	position: relative;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+.item-listing h3 {
+	font-weight: 500;
+	font-size: 23px;
+	text-align: center;
+}
+
+.item-listing p { /*price*/
+	font-weight: 600;
+	font-size: 23px;
+	text-align: center;
+	/* color: #EF8354; */
+	color: white;
+	/* background: #00a00d; */
+	background: #EF8354;
+	padding: 1px;
+	border-radius: 10px;
+	width: 50%;
+	margin: auto;
+}
+.item-listing:hover {
+	transform: scale(1.03);
+	opacity: 0.9;
+}
 
 @keyframes user-opts-animation {
 	from { transform: scale(0.4);opacity: 0.4}
