--- a/templates/create.html
+++ b/templates/create.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="static/css/create.css">
 <link rel="stylesheet" href="static/css/index.css">
 {%endblock%}
+{%block title%}Sellio - New Listing {%endblock%}
 
 {%block navbar%} 
     {%if not logged%}
