--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
           {%endif%}
     {%endblock%}
   {%block content%}
-    <div class="search-bar"><input oninput="Search(this.value)" autocomplete="on" placeholder="Search..."type="text"/><div id="search-btn"><i class="fas fa-search"></i></div></div>
+    <div class="search-bar"><input oninput="Search(this.value)" autocomplete="on" placeholder="Search Sellio..."type="text"/><div id="search-btn"><i class="fas fa-search"></i></div></div>
 
     <div class="component-selection" style="display:block">
 	<p>What type of component are you looking for ?</p>
