--- a/static/css/index.css
+++ b/static/css/index.css
@@ -352,6 +352,33 @@ body {
 	opacity: 0.9;
 }
 
+.fa-heart {
+font-size: 24px;
+    color: #eb5b5b;
+    position: relative;
+    top: 0px;
+    right: -213px;
+    transition: 0.2s;
+}
+
+.fa-heart:hover {
+	opacity: 0.8;
+	transform: scale(1.02);
+}
+
+
+.fa-arrow-left {
+	    color: #4c5970;
+    margin-right: 14px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+.fa-arrow-left:hover{
+	opacity: 0.8
+}
+
+
+
 @keyframes user-opts-animation {
 	from { transform: scale(0.4);opacity: 0.4}
 	to { transform: scale(1); opacity: 1; }
