--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
 <script src="https://kit.fontawesome.com/383a3bf828.js" crossorigin="anonymous"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
    <script src="/static/iziToast/dist/js/iziToast.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
    <link rel="stylesheet" href="/static/iziToast/dist/css/iziToast.min.css">
 
   <script src="/static/js/base.js?r={{r}}"></script>
