--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,8 +1,11 @@
 #target-pfp {
-    height: 100px;
+height: 100px;
     position: absolute;
     left: 32%;
     top: 13%;
+    width: 100px;
+    object-fit: cover;
+    border-radius: 50%;
 }
 
 #target-name {
@@ -137,3 +140,29 @@ font-size: 45px;
 #message-btn:hover {
 	opacity: 0.8;
 }
+
+
+.change-pfp {
+    opacity: 0.7;
+}
+.change-pfp:hover {
+    cursor: pointer;
+
+}
+.fa-camera {
+    position: absolute;
+    left: 34.3%;
+    top: 16.2%;
+    font-size: 33px;
+    color: #5c5c5c;
+    cursor: pointer;
+}
+.fa-camera:hover {
+    opacity: 0.5;
+}
+
+/* .change-pfp::after{
+    content: "Change profile picture";
+    position: absolute;
+    left: 0;
+} */
