--- a/templates/profile.html
+++ b/templates/profile.html
@@ -18,7 +18,8 @@
       <a href="/chats" class="navbar-links">Chats</a>
       <a href="/favorites" class="navbar-links">Favorites</a>
       <div class="new-listing-btn" onclick="window.location.href = '/new-listing'"><i class="fas fa-plus-circle"></i><span>New Listing</span></div>
-      <img onclick="$('#user-opts').toggle()"id="pfp" src="https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar"> 
+      <!-- <img onclick="$('#user-opts').toggle()"id="pfp" src="https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar">  -->
+                   <img  onclick="$('#user-opts').toggle()" id="pfp" src="/static/pfps/{{username}}.jpg?r={{r}}" onerror="if (this.src != 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar') this.src = 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar';">
       <div id="user-opts" style="display:none">
         <h3 id="user-name">Logged as {{username}}</h3>
         <div class="options" onclick="window.location.href = '/user/{{username}}'"><i class="fas fa-user-circle"></i> Profile</div>
@@ -39,7 +40,10 @@
   <!-- <img id="target-pfp" src="https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar" alt=""> -->
                        <img  id="target-pfp" src="/static/pfps/{{targetName}}.jpg?r={{r}}" onerror="if (this.src != 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar') this.src = 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar';">
   {%endif%}
-  <h3 id="target-name">{{targetName}}</h3>             <div id="message-btn"><i class="fas fa-comment-dots"></i> Message</div>
+  <h3 id="target-name">{{targetName}}</h3>            
+  {%if targetName != username%}
+   <div id="message-btn" onclick="window.location.href = '/add-user-to-chat_user={{targetName}}'"><i class="fas fa-comment-dots"></i> Message</div>
+   {%endif%}
 	<i class="fas fa-phone-alt"></i> <span id="phone">01234567898</span>
 
 	<hr>
