--- a/templates/base.html
+++ b/templates/base.html
@@ -96,6 +96,7 @@
     
     <div class="navbar">
       {%block navbar%}
+      <img src="/static/logo.png" onclick="window.location.pathname = '/'" id="logo">
       <a href="/" class="navbar-links">Home</a>
       <a href="/chats" class="navbar-links">Chats</a>
       <a href="/favorites" class="navbar-links">Favorites</a>
