--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
    <link rel="stylesheet" href="/static/iziToast/dist/css/iziToast.min.css">
 
   <script src="/static/js/base.js?r={{r}}"></script>
+  <script src="/static/js/index.js?r={{r}}"></script>
 
 	{% block head%} {% endblock%}
   </head>
