--- a/templates/create.html
+++ b/templates/create.html
@@ -16,7 +16,6 @@
           <div class="new-listing-btn" onclick="ShowAuth()"><i class="fas fa-user-plus"></i><span>Sign up</span></div>
           {%else%}
                  <!-- <img src="/static/logo.png" id="logo"> -->
-      <img src="/static/logo.png" onclick="window.location.pathname = '/'" id="logo">
            <a href="/" class="navbar-links">Home</a>
       <a href="/chats" class="navbar-links">Chats</a>
       <a href="/favorites" class="navbar-links">Favorites</a>
@@ -30,9 +29,43 @@
         <div class="options"  onclick="window.location.href = '/logout'"><i class="fas fa-sign-out-alt"></i> <span style="color: #FF6868;">Log out</span></div>
       </div>
           {%endif%}
-    {%endblock%}
+  <i class="fas fa-bars" style="display: none;" onclick="BringUpMobileNavBar()"></i>
 
-{%block content%}
+      {%endblock%}
+      {%block content%}
+      <div id="mobile-nav">
+{%if not logged%}
+         <!-- <img src="/static/logo.png" id="logo"> -->
+    <img src="/static/logo.png" onclick="window.location.pathname = '/'" id="logo">
+        <a href="/" class="navbar-links">Home</a>
+        <a onclick="ShowLogin()"class="navbar-links">Login</a>
+        <div class="new-listing-btn" onclick="ShowAuth()"><i class="fas fa-user-plus"></i><span>Sign up</span></div>
+        {%else%}
+              <!-- <img src="/static/logo.png" id="logo"> -->
+    <!-- <img src="/static/logo.png" onclick="window.location.pathname = '/'" id="logo"> -->
+         <a href="/" class="navbar-links">Home</a>
+         <br>
+         <br>
+         <br>
+         <br>
+    <a href="/chats" class="navbar-links">Chats</a>
+         <br>
+         <br>
+         <br>
+         <br>
+    <a href="/favorites" class="navbar-links">Favorites</a>
+         <br>
+         <br>
+         <br>
+         <br>
+    <div class="new-listing-btn" onclick="window.location.href = '/new-listing'"><i class="fas fa-plus-circle"></i><span>New Listing</span></div>
+    <!-- <img onclick="$('#user-opts').toggle()"id="pfp" src="https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar">  -->
+           <img  onclick="window.location.href = '/user/{{username}}'" id="pfp" src="/static/pfps/{{username}}.jpg?r={{r}}" onerror="if (this.src != 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar') this.src = 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar';">
+    
+
+    {%endif%}
+
+      </div>
 
       <div id="images-container">
       <div id="images-container">
