--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,53 @@
         <div class="options"><i class="fas fa-cog"></i> Settings</div>
         <div class="options"  onclick="window.location.href = '/logout'"><i class="fas fa-sign-out-alt"></i> <span style="color: #FF6868;">Log out</span></div>
       </div>
-          {%endif%}
-    {%endblock%}
-  {%block content%}
+
+      {%endif%}
+
+      
+      <i class="fas fa-bars" style="display: none;" onclick="BringUpMobileNavBar()"></i>
+
+      {%endblock%}
+      {%block content%}
+      <div id="mobile-nav">
+{%if not logged%}
+         <!-- <img src="/static/logo.png" id="logo"> -->
+    <img src="/static/logo.png" onclick="window.location.pathname = '/'" id="logo">
+        <a href="/" class="navbar-links">Home</a>
+        <a onclick="ShowLogin()"class="navbar-links">Login</a>
+        <div class="new-listing-btn" onclick="ShowAuth()"><i class="fas fa-user-plus"></i><span>Sign up</span></div>
+        {%else%}
+              <!-- <img src="/static/logo.png" id="logo"> -->
+    <!-- <img src="/static/logo.png" onclick="window.location.pathname = '/'" id="logo"> -->
+         <a href="/" class="navbar-links">Home</a>
+         <br>
+         <br>
+         <br>
+         <br>
+    <a href="/chats" class="navbar-links">Chats</a>
+         <br>
+         <br>
+         <br>
+         <br>
+    <a href="/favorites" class="navbar-links">Favorites</a>
+         <br>
+         <br>
+         <br>
+         <br>
+    <div class="new-listing-btn" onclick="window.location.href = '/new-listing'"><i class="fas fa-plus-circle"></i><span>New Listing</span></div>
+    <!-- <img onclick="$('#user-opts').toggle()"id="pfp" src="https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar">  -->
+           <img  onclick="window.location.href = '/user/{{username}}'" id="pfp" src="/static/pfps/{{username}}.jpg?r={{r}}" onerror="if (this.src != 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar') this.src = 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar';">
+    
+
+    {%endif%}
+
+      </div>
+
+
+
+
+
+
     <div class="search-bar"><input oninput="Search(this.value)" autocomplete="on" placeholder="Search Sellio..."type="text"/><div id="search-btn"><i class="fas fa-search"></i></div></div>
 
     <div class="component-selection" style="display:block">
