--- a/templates/chats.html
+++ b/templates/chats.html
@@ -65,8 +65,10 @@
     {%endif%}
 
       </div>
+      
 	<h2>Chats</h2>
 
+	<h3 id="desktop-only-warning">To use Chats, open Sellio on a desktop.<br><i class="fas fa-desktop"></i> <br> <a href="/">Home</a></h3>
 	<div id="container">
 		<div id="contact-list">
 			{%for contact in chats%}
