--- a/static/css/chats.css
+++ b/static/css/chats.css
@@ -120,15 +120,16 @@ h4 {
     top: 36%;
     left: 46%;
     transform: translate(-50%, -50%);
-    width: 410px;
+    width: 70%;
     font-size: 20px;
 }
 
 #send-message-container i{
-    position: relative;
-    right: -90px;
+    /* position: relative; */
+    /* right: -90px; */
     font-size: 24px;
     top: 2px;
+    margin-left: 70px;
     background: #ef8354;
     padding: 7px;
     padding-right: 13px;
@@ -181,4 +182,36 @@ background: #7586c2;
     margin-right: 14px;
 }
 
+
+#desktop-only-warning {
+    display: none;
+    font-size: 40px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-shadow: 0 0 13px #f09a75;
+}
+@media only screen and (max-width:925px){
+    #send-message-container i {
+        margin-left: 44px;
+    }
+}
+
+@media only screen and (max-width:895px){
+    #send-message-container i {
+        margin-left: 33px;
+    }
+}
+@media only screen and (max-width:656px){
+    #desktop-only-warning{
+        display: block;
+    }
+    #container {
+        display:none
+    }
+    h2{
+        display:none;
+    }
+}
 
