--- a/static/css/index.css
+++ b/static/css/index.css
@@ -450,7 +450,7 @@ font-size: 38px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1000;
+    z-index: 1000000000;  
     width: 90%;
     border-radius: 21px;
     transition: 0s !important;
