--- a/static/css/index.css
+++ b/static/css/index.css
@@ -498,3 +498,61 @@ font-size: 38px;
 		gap: 20px;
 	}
 }
+
+#welcome-div {
+	width: fit-content;
+	height: fit-content;
+    background: #ed692f;
+    padding: 30px;
+    position: fixed;
+    bottom: 108px;
+    border-top-right-radius: 20px;
+    color: white;
+    border-bottom-right-radius: 20px;
+    box-shadow: 0 10px 20px #3282b8, 0 0 0 10px #2d3142;
+    z-index: 999;
+    animation: welcome-div-anim 0.7s ease-in;
+}
+
+#welcome-div h3 {
+	font-size: 22px;
+	font-weight: 500;
+}
+
+
+#welcome-div button {
+	padding: 15px;
+    font-size: 20px;
+    width: 130px;
+    margin-top: 20px;
+    border: none;
+    background: #2d3142;
+    color: #ffffff;
+    font-family: 'Poppins';
+    border-radius: 16px;
+    box-shadow: 0 0 13px 0px #2d3142;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+#welcome-div button:hover {
+	box-shadow: 0 0 20px 0px #2d3142;
+	transform: scale(1.03)
+}
+#welcome-div button:nth-child(4){
+	background: rgb(76, 89, 112);
+    /* box-shadow: 0px 0px 20px rgb(76 89 112); */
+    font-size: 21px;
+    height: 61px;
+    padding: 0;
+    margin-left: 58px;
+}
+
+@keyframes welcome-div-anim {
+		from { 
+			left: -960px;
+		}
+		to{ 
+			left: 0
+		}
+}
