--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,8 @@
    <link rel="stylesheet" href="/static/iziToast/dist/css/iziToast.min.css">
 
   <script src="/static/js/base.js?r={{r}}"></script>
-  <script src="/static/js/index.js?r={{r}}"></script>
+  <link rel="shortcut icon" href="/static/favicon.png" >
+  <!-- <script src="/static/js/index.js?r={{r}}"></script> -->
 
 	{% block head%} {% endblock%}
   </head>
