--- a/templates/profile.html
+++ b/templates/profile.html
@@ -117,7 +117,7 @@
           method: "POST",
           body: formData
         }).then(() => {
-          window.location.pathname = "flash=Profile picture change successfully!_url=userSLASH" + "{{username}}"
+          window.location.pathname = "flash=Profile picture changed successfully!_url=userSLASH" + "{{username}}"
           
         })
       }
