--- a/static/css/create.css
+++ b/static/css/create.css
@@ -223,10 +223,10 @@ left: 33%;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    position: absolute;
+    /* position: absolute; */
     cursor: pointer;
-    left: 43%;
-    top: 45%;
+    /* left: 43%;
+    top: 45%; */
 
 }
 #clear-btn:hover {
