--- a/static/css/index.css
+++ b/static/css/index.css
@@ -24,6 +24,8 @@ body {
 	position: relative;
 	margin:8%;
 
+	
+
 }
 .navbar-links:hover{
 	opacity: 0.8
@@ -123,6 +125,7 @@ body {
 }
 .search-bar #search-btn:hover{
 	background-color: #f09a75;
+	color: #
 }
 
 
@@ -396,12 +399,6 @@ font-size: 24px;
 }
 
 
-@media  only screen and (max-width: 1200px) {
-	#component-list {
-		grid-template-columns: auto;
-	}
-}
-
 
 @media  only screen and (max-width: 570px) {
 	.component{
@@ -480,24 +477,6 @@ font-size: 38px;
 }
 
 
-@media only screen and (max-width:1600px){
-	#search-res {
-		grid-template-columns: auto auto auto;
-		gap: 20px;
-	}
-}
-@media only screen and (max-width:1400px){
-	#search-res {
-		grid-template-columns: auto auto ;
-		gap: 20px;
-	}
-}
-@media only screen and (max-width:800px){
-	#search-res {
-		grid-template-columns: auto;
-		gap: 20px;
-	}
-}
 
 #welcome-div {
 	width: fit-content;
@@ -555,4 +534,75 @@ font-size: 38px;
 		to{ 
 			left: 0
 		}
+}
+
+
+#latest-listings-container {
+	z-index: 999;
+}
+#latest-listings-hr {
+	    margin-top: 722px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid #C4C4C4;
+    background: #C4C4C4;
+    border-radius: 24px;
+	z-index: 999;
+}
+
+
+#latest-listings-heading {
+	    font-size: 40px;
+    font-weight: 500;
+    margin-left: 60px;
+    margin-top: 35px;
+	z-index: 999;
+}
+
+
+#latest-listings-res {
+	display: grid;
+	grid-template-columns: auto auto auto auto;
+	gap: 20px;
+	width: 70%;
+	height: 80%;
+	place-items: center;
+	margin: auto
+}
+/* #latest-listings-res > *:not(:last-child) {
+    display: block;
+    margin-right: 100px; 
+} */
+
+
+@media  only screen and (max-width: 1200px) {
+	#component-list {
+		grid-template-columns: auto;
+	}
+
+	#latest-listings-hr {
+		margin-top: 972px;
+
+	}
+}
+
+ 
+@media only screen and (max-width:1600px){
+	#search-res,#latest-listings-res {
+		grid-template-columns: auto auto auto;
+		gap: 20px;
+	}
+}
+@media only screen and (max-width:1400px){
+	#search-res, #latest-listings-res {
+		grid-template-columns: auto auto ;
+		gap: 20px;
+	}
+}
+@media only screen and (max-width:800px){
+	#search-res, #latest-listings-res{
+		grid-template-columns: auto;
+		gap: 20px;
+	}
 }
