--- a/templates/create.html
+++ b/templates/create.html
@@ -4,6 +4,7 @@
 <script src="static/js/create.js"></script>
 <link rel="stylesheet" href="static/css/create.css">
 <link rel="stylesheet" href="static/css/index.css">
+<script src="static/js/index.js"></script>
 {%endblock%}
 {%block title%}Sellio - New Listing {%endblock%}
 
